Commit de prueba

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          --bs-btn-bg: var(--bd-violet-bg);
          --bs-btn-border-color: var(--bd-violet-bg);
          --bs-btn-hover-color: var(--bs-white);
-         --bs-btn-hover-bg: #6528e0;
+         --bs-btn-hover-bg: #e6ddf8;
          --bs-btn-hover-border-color: #6528e0;
          --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
          --bs-btn-active-color: var(--bs-btn-hover-color);
