feat: Rebranding Latam
Actualiza referencias a nuevo nombre de la app

--- a/contact.html
+++ b/contact.html
@@ -211,7 +211,7 @@
             </form>
          </div>
          <footer class="pt-3 mt-4 text-body-secondary border-top">
-            &copy; 2024 ConectAPP UPB 2024
+            &copy; 2024 ConectAPP UPB 
          </footer>
       </div>
    </main>
