--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
          </div>
          <footer class="pt-3 mt-4 text-body-secondary border-top">
-            &copy; 2024 ConectAPP Latam
+            &copy; 2024 ConectAPP Latam 2024
          </footer>
       </div>
    </main>
