--- a/download.html
+++ b/download.html
@@ -206,7 +206,7 @@
             </ul>
          </div>
          <footer class="pt-3 mt-4 text-body-secondary border-top">
-            &copy; 2024 ConectAPP Latam 2024
+            &copy; 2024 ConectAPP Latam 
          </footer>
       </div>
    </main>
